--- a/F8/w3_band/assets/css/style.css
+++ b/F8/w3_band/assets/css/style.css
@@ -6,74 +6,5 @@
 }
 
 html {
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-#main {
-
-}
-
-#header {
-    height: 46px;
-
-    background-color: #000;
-}
-
-#nav .subnav {
-    display: none;
-    list-style: none;
-}
-
-#nav li {
-    position: relative;
-}
-
-#nav > li {
-    /* inline-block giữ lại block là để có thể chỉnh lại kích thước */
-    display: inline-block;
-}
-
-/* css cho các element con trực tiếp */
-#nav > li > a {
-    color: #fff;
-    text-transform: uppercase;
-    font-weight: 500;
-}
-
-/* css cho các element con, cháu */
-#nav li a {
-    text-decoration: none;  
-    line-height: 46px;
-    padding: 0 24px;
-    /* display: inline sẽ không điều chỉnh được kích thước */
-    display: block;
-}
-
-#nav > li:hover > a,
-#nav .subnav li:hover a {
-    color: #000;
-    background-color: #ccc;
-}
-
-#nav .subnav {
-    /* display: none; */
-    position: absolute;
-    background-color: #fff;
-}
-
-#nav .subnav a {
-    color: #000;
-}
-
-#slider {
-    min-height: 500px;
-    background-color: rgb(38, 37, 37);
-}
-
-#content {
-
-}
-
-#footer {
-
+    font-family: Helvetica, Arial, sans-serif;
 }
